fix: code update
*The text of the ipynb is refined
*The installation execution of libraries is cleaned
*The name of the classes and some titles are changed to Spanish

--- a/generative_ai/00_intro_ia_generativa.ipynb
+++ b/generative_ai/00_intro_ia_generativa.ipynb
@@ -2,11 +2,14 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Avhgr--Wx_p5"
+      },
       "source": [
         "# Capacidades, Alcances y Limitaciones de la IA Generativa\n",
         "\n",
         "## Introducción\n",
-        "Los modelos de IA generativa, como los de OpenAI y herramientas integradas en LangChain, permiten generar y procesar texto de forma automática, facilitando la construcción de asistentes virtuales y aplicaciones de procesamiento de lenguaje. Además, soluciones como el OCR de LlamaParse permiten extraer y estructurar información de documentos en formatos como PDF.\n",
+        "Los modelos de IA generativa, como los de OpenAI y herramientas integradas en LangChain, permiten generar y procesar texto de forma automática, facilitando la construcción de asistentes virtuales y aplicaciones de procesamiento de lenguaje. \n",
         "\n",
         "## Capacidades y Alcances\n",
         "- **Generación de Texto y Conversación:** Pueden crear respuestas coherentes y contextuales, ideales para chatbots y asistentes virtuales.\n",
@@ -21,10 +24,7 @@
         "\n",
         "## Conclusión\n",
         "La IA generativa es una herramienta poderosa para tareas de procesamiento y generación de texto, pero tiene limitaciones en el manejo de operaciones matemáticas o funciones propias de aplicaciones de hoja de cálculo. Comprender estas capacidades y limitaciones es clave para aprovechar eficazmente estas tecnologías sin caer en expectativas poco realistas.\n"
-      ],
-      "metadata": {
-        "id": "Avhgr--Wx_p5"
-      }
+      ]
     }
   ],
   "metadata": {
