fix(AI-Lab): version with fixed credentials

--- a/generative_ai/01_introduccion_langchain/01_introduccion_langchain.ipynb
+++ b/generative_ai/01_introduccion_langchain/01_introduccion_langchain.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -148,7 +148,7 @@
     }
    ],
    "source": [
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"sk-...\"\n",
     "\n",
     "print(\"Claves de API configuradas correctamente.\")\n"
    ]
