--- a/generative_ai/02_OCR/02_OCR.ipynb
+++ b/generative_ai/02_OCR/02_OCR.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "executionInfo": {
      "elapsed": 6033,
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 4,
@@ -90,7 +90,7 @@
    "outputs": [],
    "source": [
     "# Ajusta tu clave de LlamaParse aquí: (CONSULTA CON EL DESARROLLADOR PARA OBTENER LA API-KEY)\n",
-    "os.environ[\"LLAMA_CLOUD_API_KEY\"] = \"llx-8v5h42HTpAHWUI3YlAnj1vKiFU9RizaF9w6APcg0AU0Lw7Pa\""
+    "os.environ[\"LLAMA_CLOUD_API_KEY\"] = \"llx-...\""
    ]
   },
   {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -200,12 +200,12 @@
    "source": [
     "# 6. Carga y Procesamiento del Documento con LlamaParse\n",
     "\n",
-    "Para un mayor detalle de la configuración, visita las [opciones del parser](https://https://docs.cloud.llamaindex.ai/llamaparse/features/parsing_options)"
+    "Para un mayor detalle de la configuración, visita las [opciones del parser](https://docs.cloud.llamaindex.ai/llamaparse/features/parsing_options)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -228,8 +228,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Started parsing the file under job_id 5c185a4e-1be7-46c3-9c4e-98ab2658d819\n",
-      "\n",
+      "Started parsing the file under job_id a4496c8f-1fc7-41d7-b3be-5fc758780a33\n",
+      ".\n",
       " Documento parseado correctamente. \n",
       "\n",
       "Total de secciones extraídas: 16\n"
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -360,7 +360,7 @@
       "\n",
       "De acuerdo con lo anteriormente indicado, el Proyecto obtuvo una prórroga por 1 mes adicional al plazo ya otorgado. Posteriormente, con fecha 29 de diciembre de 2020, Grenergy presentó la adenda en respuesta del ICSARA N° 210/2020.\n",
       "\n",
-      "Luego, el 29 de enero de 2021 el SEA dictó el ICSARA Complementario N° 32/2021, respecto del cual Grenergy debía presentar la correspondiente adenda complementaria con fecha 26 de febrero de 2021.\n",
+      "d. Luego, el 29 de enero de 2021 el SEA dictó el ICSARA Complementario N° 32/2021, respecto del cual Grenergy debía presentar la correspondiente adenda complementaria con fecha 26 de febrero de 2021.\n",
       "\n",
       "No obstante lo anterior, mediante carta de fecha 23 de febrero de 2021, Grenergy solicitó al SEA que se mantuviera la suspensión del plazo de evaluación del procedimiento ambiental del Proyecto hasta el 9 de abril de 2021, con el objeto de responder adecuada y satisfactoriamente a las observaciones, rectificaciones y ampliaciones a la DIA, contenidas en el documento ICSARA Complementario N° 32/2021.\n",
       "\n",
