--- a/generative_ai/02_OCR/02_OCR_full.ipynb
+++ b/generative_ai/02_OCR/02_OCR_full.ipynb
@@ -27,7 +27,7 @@
     "- Si necesitas extraer texto de un archivo que NO sea PDF, primero utiliza la **librería de conversión** (en la Celda 2) para transformarlo en un PDF válido.\n",
     "- Configura la variable de entorno `LLAMA_CLOUD_API_KEY` con tu clave real para poder usar **LlamaParse**.\n",
     "- Ajusta los parámetros de `LlamaParse` (por ejemplo, `premium_mode`, `language`, etc.) en función de tus necesidades de OCR y parseo.\n",
-    "- Para utilizar `premium_mode` consulta con el encargado de proporcionar las `API_KEY` debido a que su uso implica un costo adicional.[link text](https://)\n",
+    "- Para utilizar `premium_mode` consulta con el encargado de proporcionar las `API_KEY` debido a que su uso implica un costo adicional.\n",
     "\n"
    ]
   },
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 20,
@@ -319,7 +319,7 @@
     "nest_asyncio.apply()\n",
     "\n",
     "# Ajusta tu clave de LlamaParse aquí:\n",
-    "os.environ[\"LLAMA_CLOUD_API_KEY\"] = \"llx-\"\n"
+    "os.environ[\"LLAMA_CLOUD_API_KEY\"] = \"llx-...\"\n"
    ]
   },
   {
@@ -330,7 +330,7 @@
    "source": [
     "# 4. Definir la ruta del documento PDF\n",
     "\n",
-    "Puedes encontrar algunos archivos de ejemplo en el siguiente [link](https://drive.google.com/drive/folders/1KKJqJ_Z-H2JP_NpA3zHFPU7839--QzF6?usp=sharing). Luego, este archivo debe ser cargado en /content/\n"
+    "Puedes encontrar algunos archivos de ejemplo en el siguiente [link](https://drive.google.com/drive/folders/1okXIznmgSOwin1QgUfTecTuPMZXg21X8?usp=sharing). Luego, este archivo debe ser cargado en /content/\n"
    ]
   },
   {
