--- a/generative_ai/03_resumidor_documentos/03_resumidor.ipynb
+++ b/generative_ai/03_resumidor_documentos/03_resumidor.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 8,
@@ -97,7 +97,7 @@
    },
    "outputs": [],
    "source": [
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\""
+    "os.environ[\"OPENAI_API_KEY\"] = \"sk-...\""
    ]
   },
   {
