--- a/generative_ai/04_clasificador_documentos/04_clasificador_full.ipynb
+++ b/generative_ai/04_clasificador_documentos/04_clasificador_full.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "La clasificación se basa en un *prompt* detallado que evalúa si una carta trata sobre **mantenimiento mayor** o no, devolviendo un valor **True** o **False**, según las reglas definidas en `prompt_summarizer`.  \n",
     "\n",
-    "Los archivos de entrada deben estar en formato `.txt` dentro del directorio `/content/input`, y los resultados se guardan en un archivo Excel llamado `clasificacion_cartas.xlsx`.\n"
+    "Los archivos de entrada deben estar en formato `.txt` dentro del directorio `generative_ai/04_clasificador_documentos/documentos_prueba`, y los resultados se guardan en un archivo Excel llamado `clasificacion_cartas.xlsx`.\n"
    ]
   },
   {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "executionInfo": {
      "elapsed": 23,
@@ -80,8 +80,8 @@
    },
    "outputs": [],
    "source": [
-    "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
-    "os.environ[\"LLAMA_CLOUD_API_KEY\"] = \"llx-8v5h42HTpAHWUI3YlAnj1vKiFU9RizaF9w6APcg0AU0Lw7Pa\""
+    "os.environ[\"OPENAI_API_KEY\"] = \"sk-...\"\n",
+    "os.environ[\"LLAMA_CLOUD_API_KEY\"] = \"llx-...\""
    ]
   },
   {
